Add /industries endpoint
